[package]
name = "snapshell"
version = "0.2.2"
edition = "2021"
authors = ["Eufrat Tsaqib <eutsat@gmail.com>"]
description = "snapshell - a snappy CLI that generates shell commands via OpenRouter LLMs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/eufat/snapshell"
homepage = "https://github.com/eufat/snapshell"
readme = "README.md"
documentation = "https://docs.rs/snapshell"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.34", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11", features = ["json", "gzip", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "4.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
